welcome.lessons.welcome.bat.bool2.CigarParty.scala.error
cigarParty:4: error: ';' expected but 'if' found.
	} if (cigars>=60 && isWeekend==true) { return true }
          ^